 ══════════
  July 15th, 2020
 ══════════
  Main App (v3.6.3.0)
  * FIXED: Stopped constant spamming of the logs when the cookie was cleared or expired.

  Action App (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'actionApp' on null object.

  Zone App (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'ZoneApp' on null object.

  Echo Device (v3.6.3.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'echoDevice' on null object.

  WebSocket  Device (v3.6.1.0)
  * FIXED: Error java.lang.NullPointerException: Cannot get property 'wsDevice' on null object.

  Server (v2.5.0)
  * UPDATED: Fixes for Amazon login flow/verifications changes.
  * FIXED: Bug fixes.
_____________________________________

 ══════════
  April 22nd, 2020
 ══════════
  Main App (v3.6.2.0)
  * ADDED: More Device Identifier
  * ADDED: Amazon.fr locale support (@Adrew)
  * UPDATED: Cleaned up some of the location events to stop spaming the mobile app events.

  Action App (v3.6.2.0)
  * FIXED: Minor bugs squashed.
  * ADDED: Support for Change in btDevicesPaired attribute.
  * ADDED: New repeat count setting to limit repeat until actions.
  * UPDATED: Cleaned up some of the location events to stop spaming the mobile app events.

  Zone App (v3.6.2.0)
  * UPDATED: Cleaned up some of the location events to stop spamming the mobile app events.
  * FIXED: Minor bugs squashed.

  Echo Device (v3.6.2.0)
  * FIXED: alexaPlaylists, btDevicesPaired attributes to return valid JSON data now (#279).
  * ADDED: deviceSerial attribute included now for devs to access the info (#268).
  * UPDATED: Cleaned up some of the location events to stop spaming the mobile app events.
_____________________________________

 ══════════
  March 11th, 2020
 ══════════
  Main App (v3.6.1.1)
  * FIXED: Scenario where cookie auth failed and server wakeup request was still being sent every 5 minutes.

  Server (v2.4.1)